shouldUpsertNewNviCandidate wip