@@ -1,95 +1,90 @@
 package handlers;
 
-import static no.unit.nva.testutils.RandomDataGenerator.randomInstant;
-import static no.unit.nva.testutils.RandomDataGenerator.randomInteger;
 import static no.unit.nva.testutils.RandomDataGenerator.randomLocalDate;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
-import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
+import handlers.model.InstitutionApprovals;
 import java.net.URI;
-import java.time.Instant;
-import java.time.LocalDate;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import no.sikt.nva.nvi.common.model.business.ApprovalStatus;
 import no.sikt.nva.nvi.common.model.business.Candidate;
 import no.sikt.nva.nvi.common.model.business.Institution;
-import no.sikt.nva.nvi.common.model.business.Level;
-import no.sikt.nva.nvi.common.model.business.Note;
-import no.sikt.nva.nvi.common.model.business.Period;
 import no.sikt.nva.nvi.common.model.business.PublicationDate;
 import no.sikt.nva.nvi.common.model.business.Status;
-import no.sikt.nva.nvi.common.model.business.Username;
 import no.sikt.nva.nvi.common.model.business.VerifiedCreator;
 
 public class TestUtils {
 
-    public static Candidate generatePendingCandidate(URI publicationId, List<URI> institutionApprovals) {
+    public static Candidate generatePendingCandidate(URI publicationId,
+                                                     List<InstitutionApprovals> institutionApprovals) {
+        var institutions = createInstitutions(institutionApprovals);
         return new Candidate.Builder()
                    .withPublicationId(publicationId)
-                   .withApprovalStatuses(createInstitutionApprovalStatuses(institutionApprovals))
-                   .withCreatorCount(randomInteger())
+                   .withApprovalStatuses(createInstitutionApprovalStatuses(institutionApprovals, institutions))
+                   .withCreatorCount(countCreators(institutionApprovals))
                    .withInstanceType(randomString())
-                   .withLevel(Level.LEVEL_ONE)
-                   .withIsApplicable(true)
-                   .withIsInternationalCollaboration(true)
-                   .withCreators(randomVerifiedCreators())
-                   .withNotes(randomNotes())
-                   .withPeriod(randomPeriod())
-                   .withPublicationDate(localDateNowAsPublicationDate())
+                   .withCreators(createCreators(institutionApprovals, institutions))
+                   .withPublicationDate(randomPublicationDate())
                    .build();
     }
 
-    private static List<ApprovalStatus> createInstitutionApprovalStatuses(List<URI> institutionApprovals) {
-        return institutionApprovals.stream().map(TestUtils::pendingApprovalStatusWithInstitutionId).toList();
+    private static PublicationDate randomPublicationDate() {
+        var randomLocalDate = randomLocalDate();
+        return new PublicationDate(String.valueOf(randomLocalDate.getYear()),
+                                   String.valueOf(randomLocalDate.getMonthValue()),
+                                   String.valueOf(randomLocalDate.getDayOfMonth()));
     }
 
-    private static PublicationDate localDateNowAsPublicationDate() {
-        var now = LocalDate.now();
-        return new PublicationDate(String.valueOf(now.getYear()), String.valueOf(now.getMonth()),
-                                   String.valueOf(now.getDayOfMonth()));
+    private static List<Institution> createInstitutions(List<InstitutionApprovals> institutionApprovals) {
+        return institutionApprovals.stream()
+                   .map(institutionApproval -> new Institution(URI.create(institutionApproval.institutionId())))
+                   .toList();
     }
 
-    private static List<VerifiedCreator> randomVerifiedCreators() {
-        return IntStream.range(1, 20).boxed().map(i -> randomVerifiedCreator()).collect(Collectors.toList());
+    private static List<VerifiedCreator> createCreators(List<InstitutionApprovals> institutionApprovals,
+                                                        List<Institution> institutions) {
+        var verifiedCreatorIds = extractCreatorIds(institutionApprovals);
+        return verifiedCreatorIds.stream()
+                   .map(creatorId -> new VerifiedCreator(URI.create(creatorId),
+                                                         getAffiliationsForCreator(creatorId, institutionApprovals,
+                                                                                   institutions)))
+                   .toList();
     }
 
-    private static VerifiedCreator randomVerifiedCreator() {
-        return new VerifiedCreator(randomUri(), randomInstitutions());
+    private static List<Institution> getAffiliationsForCreator(String creatorId,
+                                                               List<InstitutionApprovals> institutionApprovals,
+                                                               List<Institution> institutions) {
+        return institutionApprovals.stream()
+                   .filter(institutionApproval -> institutionApproval.verifiedCreators().contains(creatorId))
+                   .map(InstitutionApprovals::institutionId)
+                   .map(id -> getInstitutionById(institutions, id)).toList();
     }
 
-    private static List<Institution> randomInstitutions() {
-        return IntStream.range(1, 20).boxed().map(i -> randomInstitution()).collect(Collectors.toList());
+    private static Institution getInstitutionById(List<Institution> institutions, String id) {
+        return institutions.stream()
+                   .filter(institution -> institution.id().equals(URI.create(id)))
+                   .findFirst()
+                   .orElse(null);
     }
 
-    private static Institution randomInstitution() {
-        return new Institution(randomUri());
-    }
-    private static ApprovalStatus pendingApprovalStatusWithInstitutionId(URI id) {
-        return new ApprovalStatus.Builder()
-                   .withApproval(Status.PENDING)
-                   .withInstitution(new Institution(id))
-                   .build();
-    }
-
-    private static Period randomPeriod() {
-        return new Period.Builder().withClosed(randomInstant()).withYear(randomLocalDate().getYear()).build();
+    private static List<ApprovalStatus> createInstitutionApprovalStatuses(
+        List<InstitutionApprovals> institutionApprovals, List<Institution> institutions) {
+        return institutionApprovals.stream()
+                   .map(InstitutionApprovals::institutionId)
+                   .map(id -> new ApprovalStatus.Builder()
+                                  .withStatus(Status.PENDING)
+                                  .withInstitution(getInstitutionById(institutions, id))
+                                  .build()).toList();
     }
 
-    private static List<Note> randomNotes() {
-        return IntStream.range(1, 20).boxed().map(i -> randomNote()).collect(Collectors.toList());
+    private static int countCreators(List<InstitutionApprovals> institutionApprovals) {
+        return extractCreatorIds(institutionApprovals).size();
     }
 
-    private static Note randomNote() {
-        return new Note.Builder()
-                   .withCreatedDate(Instant.now())
-                   .withText(randomString())
-                   .withUser(randomUsername())
-                   .build();
+    private static Set<String> extractCreatorIds(List<InstitutionApprovals> institutionApprovals) {
+        return institutionApprovals.stream()
+                   .flatMap(institutionApproval -> institutionApproval.verifiedCreators().stream())
+                   .collect(Collectors.toSet());
     }
-
-    private static Username randomUsername() {
-        return new Username(randomString());
-    }
-
 }
